--- a/index.html
+++ b/index.html
@@ -4060,6 +4060,41 @@
                   </div>
             </div>
       </div>
+      <div class="support">
+            <i class="support__icon fas fa-comments"></i>
+      </div>
+      <div class="supportList">
+            <form action="">
+                  <div class="supportList__hide">
+                        <div class="supportList__form">
+                              <div class="supportList__form--close">
+                                    <i class="supportList__form--closeIcon fas fa-times-circle "></i>
+                              </div>
+                              <div class="supportList__form--heading">
+                                    <img src="./assets/image/icon-logo/logosupport.jpg" alt="" class="supportList__form--img">
+                                    <p>Xin chào mừng quý khách đến với hỗ trợ trực tuyến!</p>
+                              </div>
+                              <div class="supportList__form--call">
+                                    <h3 class="supportList__form--callTitle">Qúy khách muốn xưng hô là :*</h3>
+                                    <select name="" id="" class="supportList__form--callOption">
+                                          <option value="Chọn cách xưng hô với quý khách">Chọn cách xưng hô với quý khách</option>
+                                          <option value="Nam">Nam</option>
+                                          <option value="Nữ">Nữ</option>
+                                    </select>
+                              </div>
+                              <div class="supportList__form--name">
+                                    <h3 class="supportList__form--nameTitle">Tên của quý khách là :</h3>
+                                    <input type="text" class="supportList__form--nameInput" placeholder="Nhập tên của quý khách..." required>
+                              </div>
+                              <div class="supportList__form--phone">
+                                    <h3 class="supportList__form--phoneTitle">Số điện thoại của quý khách là:</h3>
+                                    <input type="text" class="supportList__form--phoneInput" placeholder="Nhập số điện thoại của quý khách..." required>
+                              </div>
+                              <button class="supportList__btn" type="submit">Bắt đầu chat</button>
+                        </div>
+                  </div>
+            </form>
+      </div>
 </body>
 <script src="./assets/js/banner.js"></script>
 <script src="./assets/js/slider.js"></script>
@@ -4068,4 +4103,5 @@
 <script src="./assets/js/tabProductAccessory.js"></script>
 <script src="./assets/js/watch.js"></script>
 <script src="./assets/js/game.js"></script>
+<script src="./assets/js/modal.js"></script>
 </html>
